--- a/quit_smoke.Rmd
+++ b/quit_smoke.Rmd
@@ -175,11 +175,9 @@ quit_df %>%
   colorbar(title = "Number of \ncalls")
 ```
 
-Through the map, we can see that the greatest number of quitline calls received is in Florida, followed by New York state, Oklahoma and California. This observation suggests that a lot of smokers in these states cares about ways to stop smoking, and they are willing to ask for doctors' advice or take medication to quit smoking.
+Through the map, we can see that the greatest number of quit line calls received is in Florida, followed by New York state, Oklahoma, and California. This observation suggests that a lot of smokers in these states cares about ways to stop smoking, and they are willing to ask for doctors’ advice or take medication to quit smoking.
 
-Besides doctor’s advice, tobacco tax may also affect former/current smokers to quit smoking. Therefore, we studied the current tobacco tax across the U.S.. 
-
-
+Besides doctor’s advice, tobacco tax may also affect former/current smokers to quit smoking. Therefore, we studied the current tobacco tax across the U.S. 
 
 ## Cigarette tax by state
 ```{r}
@@ -219,11 +217,13 @@ Legislation on Tobacco includes three categories:
 <li>Non-Combustible Tobacco</li>
 <li>Stamp Tax</li>
 
+
 Combustible Tobacco covers a majority number of smokers in the country and among five sub-groups in Combustible Tobacco, cigarette plays dominate role (more than 95%), so we mainly focus the cigarette tax among regions in the U.S. 
 
-Here is the amount of tax ($ per pack) for 58 regions in the US (50 states and 8 territories that belongs to the U.S.). From the plot, American Samoa (AS) has the highest cigarette tax, with 6 dollars per pack, followed by Puerto Rico (PR), Palau (PW), and District Colombia (DC). According to our previous findings, these four regions has a higher decrease of people who smoke and DC has the highest decrease. Among 50 states in the country, New York (NY) has the highest tax, with 4.35 dollars per pack. 
+The graph shows the amount of tax ($ per pack) for 58 regions in the US (50 states and 8 territories that belongs to the U.S.). American Samoa (AS) has the highest cigarette tax, with 6 dollars per pack, followed by Puerto Rico (PR), Palau (PW), and District Colombia (DC). According to our previous findings, these four regions have a higher decrease of people who smoke, and DC has the highest decrease. Among 50 states in the country, New York (NY) has the highest tax, with 4.35 dollars per pack. 
 
-As for the states with low cigarette tax, 35 regions have cigarette tax lower than 2 dollars and 14 regions lower than 1 dollars. Ohio and Texas have the largest increase in smokers from 2017 to 2020, both of which have cigarette lower than 2 dollars.
+As for the states with low cigarette tax, 35 regions have cigarette tax lower than 2 dollars and 14 regions lower than 1 dollar. Ohio and Texas have the largest increase in smokers from 2017 to 2020, both of which have cigarette lower than 2 dollars.
+
 
 
 
