--- a/part_1.Rmd
+++ b/part_1.Rmd
@@ -158,7 +158,7 @@ animate(smoke_trend_overall_plot , renderer = gifski_renderer())
 
 ```
 
-There is a  slightly increase in the percentage of former smoker and never smoker from 2017 to 2020. The percentage of former smoker increased from 24.6% to 25.8%. The percentage of never smoker increased from 59.9% to 60.9%. Meanwhile, the percentage of current every day smoker and current some day smoker were slightly decreased by 2.0% and 0.7% respectively.
+There is a slightly increase in the percentage of former smoker and never smoker from 2017 to 2020. The percentage of former smoker increased from 24.6% to 25.8%. The percentage of never smoker increased from 59.9% to 60.9%. Meanwhile, the percentage of current every day smoker and current some day smoker were slightly decreased by 2.0% and 0.7% respectively.
 
 ```{r,include=FALSE}
 #Group by race, age and sex to see their proportion among the smokers
@@ -218,6 +218,8 @@ ggplotly(plot1)
 
 
 **!!Interesting fact** : The plot shows that there were more male smokers than female smokers every year of the past four years. In the past 4 years, it can be seen that the total sum of male smokers is higher that of female smoker. 
+
+### Overall distribution of smokers among different age groups from 2017 to 2020
 
 ```{r, warning = FALSE, message = FALSE}
 #smoker's age proportion 
@@ -301,7 +303,7 @@ plot4 = finding_smoking_dis(smoke_trend_2020)+labs(title = "Distribution of smok
 ggplotly(plot4)
 ```
 
-In 2020, it can be seen that there is a high proportion of smokers in AIAN/ AIAN and any other group. Meanwhile, Asian group, especially female, has a comparatively low smokers proportion.
+In 2020, there is a high proportion of smokers in AIAN/ AIAN and any other group. Meanwhile, Asian group, especially female, has a comparatively low smokers’ proportion.
 
 ```{r, warning = FALSE, message = FALSE}
 #Plot 2019 
@@ -309,9 +311,7 @@ plot5 = finding_smoking_dis(smoke_trend_2019)+labs(title = "Distribution of smok
 ggplotly(plot5)
 ```
 
-In 2019, the smoking proportion of male AIAN and other group is the highest in all age group except 65+.
-The smoker proportion in male AIAN and other group aged 56-65 is especially prominent, which reached to 48.3%, meaning that nearly half of the group are smokers. 
-Meanwhile, Asian female has the lowest smoking proportion among all age groups.
+In 2019, the smoking proportion of male AIAN and other group is the highest in all age group except 65+.The smoker proportion in male AIAN and other group aged 56-65 is especially prominent, which reached to 48.3%, meaning that nearly half of the group are smokers. Meanwhile, Asian female has the lowest smoking proportion among all age groups.
 
 ```{r, warning = FALSE, message = FALSE}
 #Plot 2018 
@@ -319,7 +319,7 @@ plot6 = finding_smoking_dis(smoke_trend_2018)+labs(title = "Distribution of smok
 ggplotly(plot6)
 ```
 
-In 2018, the smoker proportion in female AIAN aged 46-55 is especially prominent, which reached to 60%, meaning that more than half of the group are smokers. There is a slightly increasing trend in smokers proportion in female Black/African American along with the increase of age group between 18-25 to 56-65.
+In 2018, the smoker proportion in female AIAN aged 46-55 is especially prominent, which reached to 60%, meaning that more than half of the group are smokers. There is a slightly increasing trend in smokers’ proportion in female Black/African American along with the increase of age group between 18-25 to 56-65.
 
 ```{r, warning = FALSE, message = FALSE}
 #Ploto 2017 
