--- a/index.Rmd
+++ b/index.Rmd
@@ -62,6 +62,7 @@ Statistical analysis is not applicable to our project, because the circumstances
 
 ### Overall Findings
 - There is a decreasing smoking trend from 2017 to 2020
+- Generally, the smoking proportion of Asians, especially females is the least among all age group
 - Southeast has a higher smoking rate when compared to other areas 
 - In 2020, minority groups defined by race, sexual orientation, and disability, and people with lower education levels still had a severe problem of high smoking rate. People with diabetes and stroke, who should quit smoking by 2020, did not pay much attention to this problem. The proportion of smokers increased among pregnant women and dementia patients. Health organizations and medical facilities should focus about these patients and vigorously publicize the dangers of smoking to their fight against disease
 
