--- a/index.Rmd
+++ b/index.Rmd
@@ -61,7 +61,7 @@ The dataset was downloaded from the CDC open data website. It was filtered by `l
 Statistical analysis is not applicable to our project, because the circumstances that lead a person to smoke or quit are complex. Smoking or quitting is a personal choice that may be influenced by factors such as education level, sexual orientation, and social networking, but such analyses are too large. It is also difficult to extract a few or dozens of factors from hundreds of questions in the health surveys to produce a statistically significant model of smoking. If to analyze and predict smoking rates in the United States, more datasets are needed to calculate the smoking rate in the previous year, which is a huge amount of processing, and the variables can change from year to year, especially since Covid-19 started. Therefore, we just used the data to show the recent situation of smoking in the United States.
 
 ### Overall Findings
-- There is a slightly decreasing smoking trend from 2017 to 2020. Men and people aged 56 to 65 consistently make up the majority of smokers. Smoking rates have dropped among 18-to-25-year-olds. Through comprehensive comparison of smoking rates, AIAN and other groups have the highest smoking rate, regardless of male or female. Smoking rates are lowest among Asians, especially women. The southeast has a higher smoking rate from 2017 to 2020 and based on the lower cigarette taxes in the southeast in 2020, we infer that there is some correlation. If there are more suitable data sets, we can do further investigation. West Virginia, Kentucky, and Tennessee kept the top three smoking rates for four years out of more than 50 states in the U.S. Utah and Puerto Rico kept the top three lowest smoking rates for four years, and California has done well in the past two years. Guam has the largest decrease and Texas has the largest increase of proportion of smoking comparing 2020 to 2017.
+- There is a slightly decreasing smoking trend from 2017 to 2020. Men and people aged 56 to 65 consistently make up the majority of smokers. Smoking rates have dropped among 18-to-25-year-old. Through comprehensive comparison of smoking rates, AIAN and other groups have the highest smoking rate, regardless of male or female. Smoking rates are lowest among Asians, especially women. The southeast has a higher smoking rate from 2017 to 2020 and based on the lower cigarette taxes in the southeast in 2020, we infer that there is some correlation. If there are more suitable data sets, we can do further investigation. West Virginia, Kentucky, and Tennessee kept the top three smoking rates for four years out of more than 50 states in the U.S. Utah and Puerto Rico kept the top three lowest smoking rates for four years, and California has done well in the past two years. Guam has the largest decrease and Texas has the largest increase of proportion of smoking comparing 2020 to 2017.
 
 - In 2020, minority groups defined by race, sexual orientation, and disability, and people with lower education levels still had a severe problem of high smoking rate. People with diabetes and stroke, who should quit smoking by 2020, did not pay much attention to this problem. The proportion of smokers increased among pregnant women and dementia patients. Health organizations and medical facilities should focus about these patients and vigorously publicize the dangers of smoking to their fight against disease
 
