--- a/index.Rmd
+++ b/index.Rmd
@@ -62,10 +62,14 @@ Statistical analysis is not applicable to our project, because the circumstances
 ### Overall Findings
 - There is a slightly decreasing smoking trend from 2017 to 2020. Men and people aged 56 to 65 consistently make up the majority of smokers. Smoking rates have dropped among 18-to-25-year-old. Through comprehensive comparison of smoking rates, AIAN and other groups have the highest smoking rate, regardless of male or female. Smoking rates are lowest among Asians, especially women. The southeast has a higher smoking rate from 2017 to 2020 and based on the lower cigarette taxes in the southeast in 2020, we infer that there is some correlation. If there are more suitable data sets, we can do further investigation. West Virginia, Kentucky, and Tennessee kept the top three smoking rates for four years out of more than 50 states in the U.S. Utah and Puerto Rico kept the top three lowest smoking rates for four years, and California has done well in the past two years. Guam has the largest decrease and Texas has the largest increase of proportion of smoking comparing 2020 to 2017.
 
-- In 2020, minority groups defined by race, sexual orientation, and disability, and people with lower education levels still had a severe problem of high smoking rate. People with diabetes and stroke, who should quit smoking by 2020, did not pay much attention to this problem. The proportion of smokers increased among pregnant women and dementia patients. Health organizations and medical facilities should focus about these patients and vigorously publicize the dangers of smoking to their fight against disease
+- In 2020, minority groups defined by race, sexual orientation, and disability, and people with lower education levels still had a severe problem of high smoking rate. People with diabetes and stroke, who should quit smoking by 2020, did not pay much attention to this problem. The proportion of smokers increased among pregnant women and dementia patients. Health organizations and medical facilities should focus about these patients and vigorously publicize the dangers of smoking to their fight against disease.
+
+- We observed that there are less than half of smokers had make attempts to quit smoking in 2020. Among those who tried to quit smoking, more than 70% of them had stop for smoking for only one month or less. However, more than half of them responded that a doctor, dentist, or other health professional have advised them to stop smoking in 2020. Across the U.S., many smokers have called the quit line to for counseling and/or medication related to quit smoking, especially in the Florida, New York, and California. This is a positive outcome suggesting that many smokers are willing to quit smoking. Tobacco tax remains steady throughout these years, and we consider tobacco tax only has a slight influence on proportion of quitting smoking. Even though several regions with higher taxes have a higher decrease of smokers, more influencing factors are related to people themselves as well as environment.
 
 ### Discussion
 
 The strength of our study is that people can get a sense of trends in smoking and quitting in recent years. We also looked at the smoking situation in the context of the COVID-19 pandemic. These could provide information to health organizations and healthcare facilities about which populations should be highlighted and noticed.
 
 Our study has several limitations. First, as discussed in the statistical analysis section, we find it difficult to come up with a statistically significant model due to the complexity of variables. These survey data may be biased because respondents respond to the questionnaire based on their own situation and feelings. Questions such as "smoking frequency" were answered by self-assessment, which may vary from person to person. In the study, there was no clear experimental data to reasonably justify these manifestations. It leads to the second limitation, as there were no strict rules to define a smoker. Some people may smoke only occasionally for social purposes, while others may smoke packs or even packs of cigarettes a day. We can only categorize roughly by "current every day smoker", "current some day smoker","former smoker", and "never smoker". Third, due to limited data, we focused only on cigarettes, while there are many other forms of tobacco smoking, such as small cigarettes, cigars and other non-combustible smoking, such as chewing tobacco and e-cigarettes.
+
+All in all, smoking is not a healthy behavior for the smokers as well as the people around the smoker because smoking will cause many health issues. According to the CDC, quitting smoking has health benefits at any age, no matter how long or how much you have smoked. We hope that more policies can be enforced to encourage current smokers to quit smoking and further reduce smoking rates in the United States. 
