--- a/index.Rmd
+++ b/index.Rmd
@@ -19,8 +19,8 @@ It is known that smoking causes a lot of health problems, but according to the [
 
 Our main objective is to provide information to health organizations and healthcare facilities about the characteristics of smokers and people who quit smoking in the United States, as well as the specific populations which need more attention.
 
-
-
+### Screencast
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/vmTeQ3dgnSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 ### Data
 
 * [National Health Interview Survey (NHIS)](https://www.cdc.gov/nchs/nhis/index.htm)
