--- a/quite_smoke.Rmd
+++ b/quite_smoke.Rmd
@@ -3,14 +3,14 @@ title: "Let's Quit Smoking!"
 output: html_document
 ---
 
-### Here are some suggestion for you to quit smoking!
+### Here are some suggestions for you to quit smoking!
 
 1. Talk to a quit smoking counselor individually or in a group.
 
-2. Get [free confidential coaching](https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitline/index.html)through a telephone quitline (1-800-QUIT-NOW).
+2. Get [free confidential coaching](https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitline/index.html) through a telephone quitline (1-800-QUIT-NOW).
 
 3. Use a mobile app like [quitSTART](https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html).
-More suggestion can be found in [Centers for Disease Control and Prevention (CDC)](https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm)
+More suggestion can be found in [Centers for Disease Control and Prevention (CDC)](https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm).
 
 <center><img src="photo.jpeg" style="width:50%; float: left"></center>
 <center><img src="smoke.jpeg" style="width:35%"></center>
